--- a/styles/global.css
+++ b/styles/global.css
@@ -6,10 +6,15 @@
 
 /*cores*/
 :root {
-  --brand-color-light: #60a5fa;
-  --brand-color-dark: #1d4ed8;
-  --bg-color: #0f172a;
-  --stroke-color: #1e293b;
-  --text-color-primary : #f1f5f9;
-  --text-color-secondary : #cbd5e1;
+  --brand-color-light: ##60A5FA;
+  --brand-color-dark: #1D4ED8;
+  --bg-color: #0F172A;
+  --stroke-color: #1E293B;
+  --text-color-primary : #F1F5F9;
+  --text-color-secondary : #CBD5E1;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color-primary);
 }
