featured section structure done

--- a/styles/global.css
+++ b/styles/global.css
@@ -48,10 +48,10 @@ h1, h2, h3 {
   margin-inline: auto;
 }
 
-.grid {
-  display: grid;
+main {
+  margin-top: 40px;
 }
 
-.grid-flow-col {
-  grid-auto-flow: column;
+img {
+  max-width: 100%;
 }
